force-app/main/default/objects/Meeting__c/Meeting__c.object-meta.xml
<CustomObject>
    <label>Meeting</label>
    <nameField>
        <label>Meeting Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>