force-app/main/default/objects/Meeting__c/fields/Count_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Employees__c</fullName>
    <label>Count of Employees</label>
    <summaryForeignKey>Participator__c.Meeting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>