force-app/main/default/objects/Meeting__c/fields/Ends_at__c.field-meta.xml
<CustomField>
    <fullName>Ends_at__c</fullName>
    <label>Ends at</label>
    <required>true</required>
    <type>Time</type>
</CustomField>