force-app/main/default/objects/Meeting__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>