force-app/main/default/objects/Meeting__c/fields/Starts_at__c.field-meta.xml
<CustomField>
    <fullName>Starts_at__c</fullName>
    <label>Starts at</label>
    <required>true</required>
    <type>Time</type>
</CustomField>