force-app/main/default/objects/Meeting__c/fields/When__c.field-meta.xml
<CustomField>
    <fullName>When__c</fullName>
    <label>When</label>
    <required>true</required>
    <type>Date</type>
</CustomField>