force-app/main/default/objects/Meeting__c/validationRules/End_time_before_room_closes.validationRule-meta.xml
<ValidationRule>
    <fullName>End_time_before_room_closes</fullName>
    <active>true</active>
    <errorConditionFormula>Room__r.Room_Closes_at__c &lt; Ends_at__c</errorConditionFormula>
    <errorDisplayField>Ends_at__c</errorDisplayField>
    <errorMessage>End time of meeting should be before room closes</errorMessage>
</ValidationRule>