force-app/main/default/objects/Meeting__c/validationRules/Meeting_not_before_now.validationRule-meta.xml
<ValidationRule>
    <fullName>Meeting_not_before_now</fullName>
    <active>true</active>
    <errorConditionFormula>When__c &lt;= TODAY() 
|| (Starts_at__c &lt;  TIMENOW() &amp;&amp; When__c = TODAY())</errorConditionFormula>
    <errorMessage>You could not set meeting to past</errorMessage>
</ValidationRule>