force-app/main/default/objects/Meeting__c/validationRules/Start_time_after_room_open.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_time_after_room_open</fullName>
    <active>true</active>
    <errorConditionFormula>Room__r.Room_Opens_at__c &gt; Starts_at__c</errorConditionFormula>
    <errorDisplayField>Starts_at__c</errorDisplayField>
    <errorMessage>Start time of meeting should be after room opens</errorMessage>
</ValidationRule>