force-app/main/default/objects/Meeting__c/validationRules/Start_time_before_end_time.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_time_before_end_time</fullName>
    <active>true</active>
    <errorConditionFormula>Starts_at__c &gt;= Ends_at__c</errorConditionFormula>
    <errorMessage>Start time should be before end time and should be in one day.</errorMessage>
</ValidationRule>